 * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 * Removed StationaryCovarianceModel
 * CovarianceModel.computeAsScalar allows scalars
 * Swapped SimulatedAnnealingLHS constructor SpaceFilling/TemperatureProfile arguments

=== Documentation ===
 * Fixed example and plot of Kolmogorov statistics.

=== Python module ===
 * Serialize Python wrapper objects using dill (PythonDistribution, PythonFunction ...)

=== Miscellaneous ===

=== Bug fixes ===
 * #1052 (The Dirichlet and Normal distributions only have 1D graphics in the doc)
 * #1229 (Better encapsulation of optional 3rd-party headers)
 * #1257 (Cannot create a SimulatedAnnealingLHS without specifying the temperature profile)
 * #1287 (The constructors of KernelSmoothing have no doc)
 * #1418 (The Contour example does not present the second constructor)
 * #1425 (There is no method to create a train / test pair)
 * #1431 (The figure for LHSExperiment is not accurate)
 * #1459 (There is no example which shows how to set a column of a Sample)
 * #1497 (There is no example to create a multivariate Normal distribution)
 * #1506 (The Brent class has no example)
 * #1650 (There is no example of a parametric StationaryFunctionalCovarianceModel)
 * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
 * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
 * #1680 (QuadraticBasisFactory multiplies cross products by 2)
 * #1710 (Misleading y labels in VisualTest.DrawPairsMarginals())
 * #1713 (The doc of the ResourceMap does not match the content of the ResourceMap)
 * #1714 (The log-PDF of the Pareto is wrong)
 * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)
 * #1723 (There is no interesting example of the ExprTk feature of SymbolicFunction)
 * #1725 (The BetaFactory help page has wrong equations)
 * #1729 (LinearModelAnalysis sometimes fail)