@@ -28,6 +28,7 @@
 
 === Documentation ===
  * Fixed example and plot of Kolmogorov statistics.
+ * Added a new example showing how to combine RandomWalkMetropolisHastings and PythonDistribution
 
 === Python module ===
  * Serialize Python wrapper objects using dill (PythonDistribution, PythonFunction ...)
